--- a/Webpack/src/index.html
+++ b/Webpack/src/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webpack</title>
+
+    <!-- Forma tradicional de llamar a los estilos css -->
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    Llámame!😅
+
+    <!-- Forma tradicional de llamar a los js -->
     <script src="./index.js"></script>
 </body>
 </html>
